Fix spacing issues

--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ p a {
 
 .recently-moved-container,
 .top-destinations {
-    padding: 0 20px 40px 0;
+    padding: 0 20px 60px 0;
     position: relative;
     z-index: 10;
 }
@@ -354,7 +354,7 @@ p a {
 
 .chart-container__today {
     right: 13px;
-    bottom: calc( var(--chart-offset) + 35px );
+    bottom: calc( var(--chart-offset) + 27px);
     transform-origin: right center;
 }
 
@@ -395,7 +395,7 @@ p a {
 }
 
 .activity-log h3 {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .activity-log-data hr {
